Fixed the issue the services hover on mobile

--- a/style.css
+++ b/style.css
@@ -30,34 +30,46 @@ body::-webkit-scrollbar {
 
 #menu-services {
     display: flex;
+    align-items: center;
+    height: 50px;
 }
 
 #menu-services:hover #services-dropdown {
-    display: flex;
+    visibility: visible;
+    opacity: 1;
+    top: 75px;
 }
 
 #services-dropdown {
-    display: none;
-    position: absolute;
-    top: 62px;
-    background: white;
+    display: flex;
     flex-direction: column;
     align-items: baseline;
+    justify-content: space-evenly;
+    visibility: hidden;
+    position: absolute;
+    top: 60px;
+    background: white;
     padding: 10px;
+    height: 320px;
+    opacity: 0;
     box-shadow: 0px 8px 16px 0px rgb(0 0 0 / 20%);
+    transition: 
+    all 0.3s ease-in-out 0s,
+    visibility 400ms ease-in-out 100ms,
+    opacity 400ms ease-in-out 100ms,
+    top 400ms ease-in-out 100ms;
 }
 
 #services-dropdown a {
     color: black;
-    margin-bottom: 5px;
     width: 100%;
-    text-align: left;
-    height: 30px;
+    border-width: 1px 0;
+    border-style: dotted;
+    border-color: white;
 }
 
 #services-dropdown a:hover {
-    border-width: 1px 0;
-    border-style: dotted;
+    border-color: black;
 }
 
 #ham-show nav {
@@ -65,20 +77,15 @@ body::-webkit-scrollbar {
     flex-direction: column;
     background-color: #000000d9;
     align-items: center;
-    justify-content: center;
     width: 100vw;
     height: 100vh;
     position: absolute;
     top: 0;
-}
-
-#ham-show span {
-    margin-bottom: 25px;
+    left: 0;
 }
 
 #ham-show nav a {
-    font-size: 2em;
-    margin-bottom: 10px;
+    font-size: 2rem;
 }
 
 #ham-show .ham {
@@ -91,6 +98,10 @@ body::-webkit-scrollbar {
     z-index: 1;
 }
 
+#ham-show #services-dropdown {
+    min-height: 60vh;
+}
+
 header {
     position: sticky;
     top: 0;
@@ -99,26 +110,18 @@ header {
 
 .menu-container {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     height: 100px;
     align-items: center;
     padding: 0 5vw;
-    top: 0;
-    width: 100%;
     background-color: black;
-
 }
 
-.menu-container span {
-    height: 21px;
-    background-color:black;
-    text-align: center;
-    margin-left: 2vw;
-}
 .menu-container nav {
-    width: 80%;
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-evenly;
+    width: 80%;
+    max-width: 750px;
 }
 .menu-container a {
     color :rgb(202, 185, 185);
@@ -170,7 +173,7 @@ header {
     width: 320px;
     height: 340px;
     background-color: white;
-    box-shadow: 0px 0px 3em rgba(0, 0, 0, 0, .15);
+    box-shadow: 0px 8px 16px 0px rgb(0 0 0 / 20%);
     margin: 2vh 2vw;
 }
 .main-Services h1 {
@@ -352,24 +355,32 @@ form label , form input{
 
 
 
+/* ___________  Graphic Design  _____________ */
 
-
-.graphic-img{
+.graphic-img {
     display: flex;
     justify-content: flex-start;
     flex-wrap: wrap;
 
 }
-.graphic-img img{
+.graphic-img img {
     width: 300px;
     margin: 1%;
     background-color: black;
 }
+
+
+/* ___________  @media  _____________ */
+
 @media (max-width: 750px) {
     .menu-container nav {
         display: none;
     }
     .ham {
         display: block;
+    }
+    #services-dropdown a {
+        border-color: black;
+        border-width: 0 0 1px 0;
     }
 }
